--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index",
     "dev": "nodemon index",
-    "seed": "node utils/seed"
+    "seed": "node utils/seed.js"
   },
   "repository": {
     "type": "git",
@@ -20,8 +20,10 @@
   },
   "homepage": "https://github.com/tneiman19/NoSQL-Social-Network-API#readme",
   "dependencies": {
+    "dateformat": "^5.0.3",
     "express": "^4.17.1",
-    "mongoose": "^6.0.13"
+    "mongoose": "^6.0.13",
+    "dayjs": "^1.11.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.9"
